# src/shared/infra/http/routes/author.routes.ts
@@ -19,6 +19,6 @@ export const authorRoutes = Router()
 authorRoutes.post("/author", ensureAuthenticated ,createAuthorController.handle)
 authorRoutes.get("/authors" ,listAuthorsController.handle)
 authorRoutes.delete("/author/:id", ensureAuthenticated ,deleteAuthorController.handle)
-authorRoutes.get("/authorDetail/:name", authorDetailController.handle)
+authorRoutes.get("/authorDetail/:id", authorDetailController.handle)
 authorRoutes.patch("/updateAuthor/:authorId",  ensureAuthenticated ,authorUpdatedController.handle)
 authorRoutes.post("/relationAuthorBook",  ensureAuthenticated ,relationAuthorToBookController.handle)
