# src/shared/infra/http/routes/book.routes.ts
@@ -18,5 +18,5 @@ export const routeBook = Router();
 routeBook.post("/book", ensureAuthenticated ,createBookController.handle)
 routeBook.get("/books" ,listBooksController.handle)
 routeBook.delete("/book/:id",  ensureAuthenticated ,deleteBooksController.handle)
-routeBook.get("/bookDetail/:title", detailBookController.handle)
+routeBook.get("/bookDetail/:id", detailBookController.handle)
 routeBook.patch("/updateBook/:id",  ensureAuthenticated ,updateBookController.handle)
